# AdaptiveBloomFilter

./: AdaptiveBloomFilter.cpp  AdaptiveBloomFilter.h  CMakeLists.txt  Dictionary.cpp  Dictionary.h  HashFunctionSHA512.cpp  HashFunctionSHA512.h  SlowMemoryRepresentation.cpp  SlowMemoryRepresentation.h  macros.h  main.cpp
test_result/: result_file
